--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- BARRE DE NAVIGATION -->
-    <nav class="navbar navbar-expand-lg navbar-dark  " style="background-color: rgba(0,0,0,0.6); backdrop-filter: blur(5px);">
+    <nav class="navbar navbar-expand-lg navbar-dark glass-navbar " >
       <div class="container">
         <a class="navbar-brand" href="index.html">LOGO</a>
         <button class="navbar-toggler collapsed" type="button" 
