add others elements for the display

--- a/apropos.html
+++ b/apropos.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <!-- BARRE DE NAVIGATION -->
-    <nav class="navbar navbar-expand-lg navbar-dark glass-navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark  " style="background-color: black;" >
       <div class="container">
-        <a class="navbar-brand" href="index.html">LOGO</a>
+        <a class="navbar-brand" href="index.html"><img src="image/logo1.png" alt="Logo" style="height: 80px;"></a>
         <button class="navbar-toggler collapsed" type="button" 
             data-bs-toggle="collapse" 
             data-bs-target="#navbarsExample07" 
@@ -55,41 +55,42 @@
      
 </div> -->
 
-<section id="about" class="py-5" >
+<section id="about" class="py-5">
   <div class="container">
-    <div class="card mb-4 glass-card p-4 text-white">
-      <div class="text-center mb-3">
-        <h1 class="section-title">À propos de <span class="text-primary">[Nom de l’agence]</span></h1>
-        <p class="lead">Depuis [année], nous aidons entreprises et e-commerçants à se démarquer grâce à des stratégies SEO sur mesure et performantes.</p>
+
+    <div class="d-flex justify-content-center align-items-center text-center mb-5" style="height: 30vh;">
+      <div class="content text-dark">
+        <h1 class="main-title mb-3 extra-title">À propos de <span class="text-danger">SEO Agency</span></h1>
+        <p class="lead sub-text">Depuis 2025, nous aidons entreprises et e-commerçants à se démarquer grâce à des stratégies SEO sur mesure et performantes.</p>
       </div>
     </div>
 
-    <div class="row mb-4">
+    <div class="row mb-5 g-4">
       <div class="col-md-6">
-        <div class="card glass-card p-3 mb-3 text-white" id="history">
-          <h2 class="h4 fw-semibold">🌱 Notre histoire</h2>
-          <p>L’aventure de [Nom de l’agence] est née de la passion de [Fondateur / équipe] pour le référencement naturel et le marketing digital...</p>
+        <div class="p-4 shadow rounded bg-white text-dark animate">
+          <h2 class="h4 fw-semibold mb-3 extra-title"> Notre histoire</h2>
+          <p class="sub-text">L’aventure de <span class="text-danger">SEO Agency</span> est née de la passion de Mr MATHIEU RAN pour le référencement naturel et le marketing digital...</p>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="card glass-card p-3 mb-3 text-white" id="vision">
-          <h2 class="h4 fw-semibold">🚀 Notre vision</h2>
-          <p>Le SEO est une stratégie durable, fondée sur :</p>
-          <ul>
+        <div class="p-4 shadow rounded bg-white text-dark animate">
+          <h2 class="h4 fw-semibold mb-3 extra-title"> Notre vision</h2>
+          <p class="sub-text">Le SEO est une stratégie durable, fondée sur :</p>
+          <ul class="sub-text">
             <li>une analyse technique approfondie,</li>
             <li>des contenus utiles et engageants,</li>
             <li>et un netlinking qualitatif.</li>
           </ul>
-          <p>Nous mettons la <strong>transparence, la pédagogie et la performance</strong> au cœur de nos actions.</p>
+          <p class="sub-text">Nous mettons la <strong>transparence, la pédagogie et la performance</strong> au cœur de nos actions.</p>
         </div>
       </div>
     </div>
 
-    <div class="row mb-4">
+    <div class="row mb-5 g-4">
       <div class="col-md-6">
-        <div class="card glass-card p-3 mb-3 text-white" id="expertises">
-          <h2 class="h4 fw-semibold">🔧 Nos expertises</h2>
-          <ul class="list-unstyled">
+        <div class="p-4 shadow rounded bg-white text-dark animate">
+          <h2 class="h4 fw-semibold mb-3 extra-title"> Nos expertises</h2>
+          <ul class="list-unstyled sub-text">
             <li>✅ Audit SEO complet</li>
             <li>✅ Optimisation technique et sémantique</li>
             <li>✅ Rédaction de contenus optimisés</li>
@@ -99,10 +100,10 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="card glass-card p-3 mb-3 text-white" id="whyus">
-          <h2 class="h4 fw-semibold">🤝 Pourquoi nous choisir ?</h2>
-          <ul class="list-unstyled">
-            <li>✔ +[X] années d’expérience</li>
+        <div class="p-4 shadow rounded bg-white text-dark animate">
+          <h2 class="h4 fw-semibold mb-3 extra-title"> Pourquoi nous choisir ?</h2>
+          <ul class="list-unstyled sub-text">
+            <li>✔ +6 années d’expérience</li>
             <li>✔ Une équipe passionnée et disponible</li>
             <li>✔ Stratégies personnalisées adaptées à votre secteur</li>
             <li>✔ Approche durable et respectueuse des règles Google</li>
@@ -111,38 +112,44 @@
       </div>
     </div>
 
-    <div class="card glass-card p-4 mb-4 text-center text-white" id="stats">
-      <h2 class="h4 fw-semibold">📊 Quelques chiffres</h2>
-      <div class="row">
-        <div class="col-md-4">
-          <p class="display-6 fw-bold text-primary">+[X]%</p>
-          <p>Croissance moyenne du trafic organique</p>
-        </div>
-        <div class="col-md-4">
-          <p class="display-6 fw-bold text-primary">+[X]</p>
-          <p>Sites accompagnés depuis [année]</p>
-        </div>
-        <div class="col-md-4">
-          <p class="display-6 fw-bold text-primary">[X]%</p>
-          <p>Clients fidèles grâce à notre suivi régulier</p>
-        </div>
-      </div>
+    <div class="mb-5 text-center p-4 shadow rounded bg-white text-dark animate">
+  <h2 class="h4 fw-semibold mb-4 extra-title">Quelques chiffres</h2>
+  <div class="row g-4">
+    <div class="col-md-4">
+      <p class="display-2 fw-bold text-danger sub-text">+45%</p>
+      <i class="bi bi-bar-chart-fill fs-2 text-danger"></i> 
+      <p class="sub-text mt-2">Croissance moyenne du trafic organique</p>
+    </div>
+    <div class="col-md-4">
+      <p class="display-2 fw-bold text-danger sub-text">+40</p>
+      <i class="bi bi-people-fill fs-2 text-danger"></i> 
+      <p class="sub-text mt-2">Sites accompagnés depuis 2025</p>
+    </div>
+    <div class="col-md-4">
+      <p class="display-2 fw-bold text-danger sub-text">95%</p>
+      <i class="bi bi-hand-thumbs-up-fill fs-2 text-danger"></i> 
+      <p class="sub-text mt-2">Clients fidèles grâce à notre suivi régulier</p>
+    </div>
+  </div>
+</div>
+
+
+    <div class="text-center p-4 shadow rounded bg-white text-dark animate">
+      <h2 class="h4 fw-semibold mb-3 extra-title">🔗 Envie d’en savoir plus ?</h2>
+      <p class="sub-text">Découvrez <a href="services.html" class="text-primary fw-bold">nos services</a> ou <a href="contact.html" class="text-primary fw-bold">contactez-nous</a> pour obtenir un audit SEO gratuit.</p>
+      <a href="contact.html" class="btn btn-primary mt-3">Nous contacter</a>
     </div>
 
-    <div class="card glass-card p-4 text-center text-white" id="cta">
-      <h2 class="h4 fw-semibold">🔗 Envie d’en savoir plus ?</h2>
-      <p>Découvrez <a href="/services" class="text-primary fw-bold">nos services</a> ou <a href="/contact" class="text-primary fw-bold">contactez-nous</a> pour obtenir un audit SEO gratuit.</p>
-      <a href="/contact" class="btn btn-primary mt-2">Nous contacter</a>
-    </div>
   </div>
 </section>
 
 
 
+
     <!-- FOOTER -->
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-2 border-top text-light " style="background-color: rgba(0,0,0,0.5); backdrop-filter: blur(5px);">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-2 border-top text-light " style="background-color:black">
     <div class="col-md-4 d-flex align-items-center">
-        LOGO
+        <img src="image/logo1.png" alt="Logo" style="height: 50px;">
         <span class="mb-3 mb-md-0 text-body-secondary">© 2025 Company, Inc</span>
     </div>
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
