--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <!-- BARRE DE NAVIGATION -->
-    <nav class="navbar navbar-expand-lg navbar-dark glass-navbar " >
+    <nav class="navbar navbar-expand-lg navbar-dark  " style="background-color: black;" >
       <div class="container">
-        <a class="navbar-brand" href="index.html">LOGO</a>
+        <a class="navbar-brand" href="index.html"><img src="image/logo1.png" alt="Logo" style="height: 80px;"></a>
         <button class="navbar-toggler collapsed" type="button" 
             data-bs-toggle="collapse" 
             data-bs-target="#navbarsExample07" 
@@ -50,23 +50,35 @@
     </nav>
 
     <!-- main -->
-<div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
-    <div class="card p-4 shadow rounded mt-3  text-light" 
-       style="max-width: 500px; width: 90%; background-color: rgba(0, 0, 0, 0.6);">
-        <h1 class="h4 mb-3 text-center">Booster votre visibilité en ligne</h1>
-        <p class="mb-3">
-        Notre agence SEO vous accompagne pour améliorer votre positionnement sur Google et attirer plus de clients.
-        Stratégie sur mesure, contenus optimisés et résultats mesurables pour faire décoller votre business.
-        </p>
-        <a href="#" class="btn btn-secondary">Learn more</a>
+<div class="d-flex justify-content-center align-items-center text-center" style="height: 50vh;">
+  <div class="content text-dark">
+    <h1 class="main-title mb-3">Boostez votre visibilité en ligne</h1>
+    <p class="mb-3">
+      Notre agence SEO vous accompagne pour améliorer votre positionnement sur Google et attirer plus de clients.
+      Stratégie sur mesure, contenus optimisés et résultats mesurables pour faire décoller votre business.
+    </p>
+    <a href="#" class="btn btn-secondary">En savoir plus</a>
+  </div>
+</div>
+
+<div class="d-flex justify-content-center align-items-center text-center" style="height: 50vh;">
+  <div class="content text-dark">
+    <h1 class="main-title mb-3">Pourquoi choisir notre agence SEO ?</h1>
+    <p class="mb-3">
+      Grâce à notre expertise et à notre approche personnalisée, nous vous aidons à atteindre vos objectifs.
+      De l’audit technique à la stratégie de contenu, nous mettons tout en œuvre pour maximiser votre visibilité
+      et augmenter durablement votre trafic qualifié.
+    </p>
+    <a href="#" class="btn btn-secondary">En savoir plus</a>
   </div>
 </div>
 
 
+
     <!-- FOOTER -->
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-2 border-top text-light " style="background-color: rgba(0,0,0,0.5); backdrop-filter: blur(5px);">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-2 border-top text-light " style="background-color:black">
     <div class="col-md-4 d-flex align-items-center">
-        LOGO
+        <img src="image/logo1.png" alt="Logo" style="height: 50px;">
         <span class="mb-3 mb-md-0 text-body-secondary">© 2025 Company, Inc</span>
     </div>
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
