--- a/services.html
+++ b/services.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <!-- BARRE DE NAVIGATION -->
-    <nav class="navbar navbar-expand-lg navbar-dark glass-navbar ">
+    <nav class="navbar navbar-expand-lg navbar-dark  " style="background-color: black;" >
       <div class="container">
-        <a class="navbar-brand" href="index.html">LOGO</a>
+        <a class="navbar-brand" href="index.html"><img src="image/logo1.png" alt="Logo" style="height: 80px;"></a>
         <button class="navbar-toggler collapsed" type="button" 
             data-bs-toggle="collapse" 
             data-bs-target="#navbarsExample07" 
@@ -28,7 +28,7 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html">ACCUEIL <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item ">
               <a class="nav-link" href="apropos.html">A PROPOS</a>
             </li>
             <li class="nav-item dropdown active">
@@ -56,10 +56,10 @@
 </div>
 
 
-    <!-- FOOTER -->
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-2 border-top text-light " style="background-color: rgba(0,0,0,0.5); backdrop-filter: blur(5px);">
+     <!-- FOOTER -->
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-2 border-top text-light " style="background-color:black">
     <div class="col-md-4 d-flex align-items-center">
-        LOGO
+        <img src="image/logo1.png" alt="Logo" style="height: 50px;">
         <span class="mb-3 mb-md-0 text-body-secondary">© 2025 Company, Inc</span>
     </div>
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
