adding service and contact elements

--- a/apropos.html
+++ b/apropos.html
@@ -34,9 +34,10 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="services.html" id="dropdown07" data-bs-toggle="dropdown" aria-expanded="false">NOS SERVICES</a>
               <div class="dropdown-menu" aria-labelledby="dropdown07">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="services.html#card1">Audit SEO complet</a>
+                <a class="dropdown-item" href="services.html#card2">Rédaction de Contenu Optimisé</a>
+                <a class="dropdown-item" href="services.html#card3">Optimisation On-Page</a>
+                <a class="dropdown-item" href="services.html#card4">SEO Local</a>
               </div>
             </li>
             <li class="nav-item">
@@ -50,10 +51,7 @@
       </div>
     </nav>
 
-    <!-- main -->
-<!-- <div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
-     
-</div> -->
+
 
 <section id="about" class="py-5">
   <div class="container">
@@ -66,7 +64,7 @@
     </div>
 
     <div class="row mb-5 g-4">
-      <div class="col-md-6">
+      <div class="col-md-6 " >
         <div class="p-4 shadow rounded bg-white text-dark animate">
           <h2 class="h4 fw-semibold mb-3 extra-title"> Notre histoire</h2>
           <p class="sub-text">L’aventure de <span class="text-danger">SEO Agency</span> est née de la passion de Mr MATHIEU RAN pour le référencement naturel et le marketing digital...</p>
@@ -116,18 +114,18 @@
   <h2 class="h4 fw-semibold mb-4 extra-title">Quelques chiffres</h2>
   <div class="row g-4">
     <div class="col-md-4">
-      <p class="display-2 fw-bold text-danger sub-text">+45%</p>
-      <i class="bi bi-bar-chart-fill fs-2 text-danger"></i> 
+      <p class="display-2 fw-bold text-danger sub-text" style="font-size: 1.8rem;">+45%</p>
+      <i class="bi bi-bar-chart-fill fs-2 text-danger" style="font-size: 1.8rem;"></i> 
       <p class="sub-text mt-2">Croissance moyenne du trafic organique</p>
     </div>
     <div class="col-md-4">
-      <p class="display-2 fw-bold text-danger sub-text">+40</p>
-      <i class="bi bi-people-fill fs-2 text-danger"></i> 
+      <p class="display-2 fw-bold text-danger sub-text" style="font-size: 1.8rem;">+40</p>
+      <i class="bi bi-people-fill fs-2 text-danger" style="font-size: 1.8rem;"></i> 
       <p class="sub-text mt-2">Sites accompagnés depuis 2025</p>
     </div>
     <div class="col-md-4">
-      <p class="display-2 fw-bold text-danger sub-text">95%</p>
-      <i class="bi bi-hand-thumbs-up-fill fs-2 text-danger"></i> 
+      <p class="display-2 fw-bold text-danger sub-text" style="font-size: 1.8rem;">95%</p>
+      <i class="bi bi-hand-thumbs-up-fill fs-2 text-danger" style="font-size: 1.8rem;"></i> 
       <p class="sub-text mt-2">Clients fidèles grâce à notre suivi régulier</p>
     </div>
   </div>
@@ -143,7 +141,7 @@
   </div>
 </section>
 
-
+<br>
 
 
     <!-- FOOTER -->
@@ -160,19 +158,11 @@
 
     
 
-<!-- ScrollReveal JS -->
-<script src="https://unpkg.com/scrollreveal"></script>
+
+
 <script src="js/script.js"></script>
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<!-- <script>
-  document.addEventListener('DOMContentLoaded', function () {
-    var dropdownLink = document.getElementById('dropdown07');
-    dropdownLink.addEventListener('click', function (e) {
-      // Aller directement sur la page services.html au clic
-      window.location.href = this.href;
-    });
-  });
-</script> -->
+
 </body>
 </html>
