--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="services.html" id="dropdown07" data-bs-toggle="dropdown" aria-expanded="false">NOS SERVICES</a>
               <div class="dropdown-menu" aria-labelledby="dropdown07">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="services.html#card1">Audit SEO complet</a>
+                <a class="dropdown-item" href="services.html#card2">Rédaction de Contenu Optimisé</a>
+                <a class="dropdown-item" href="services.html#card3">Optimisation On-Page</a>
+                <a class="dropdown-item" href="services.html#card4">SEO Local</a>
               </div>
             </li>
             <li class="nav-item">
@@ -57,7 +58,7 @@
       Notre agence SEO vous accompagne pour améliorer votre positionnement sur Google et attirer plus de clients.
       Stratégie sur mesure, contenus optimisés et résultats mesurables pour faire décoller votre business.
     </p>
-    <a href="#" class="btn btn-secondary">En savoir plus</a>
+    <a href="services.html" class="btn btn-secondary">En savoir plus</a>
   </div>
 </div>
 
@@ -69,7 +70,7 @@
       De l’audit technique à la stratégie de contenu, nous mettons tout en œuvre pour maximiser votre visibilité
       et augmenter durablement votre trafic qualifié.
     </p>
-    <a href="#" class="btn btn-secondary">En savoir plus</a>
+    <a href="services.html" class="btn btn-secondary">En savoir plus</a>
   </div>
 </div>
 
@@ -91,7 +92,8 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script>
+<script src="js/script.js"></script>
+<!-- <script>
   document.addEventListener('DOMContentLoaded', function () {
     var dropdownLink = document.getElementById('dropdown07');
     dropdownLink.addEventListener('click', function (e) {
@@ -99,6 +101,6 @@
       window.location.href = this.href;
     });
   });
-</script>
+</script> -->
 </body>
 </html>
