--- a/services.html
+++ b/services.html
@@ -34,9 +34,10 @@
             <li class="nav-item dropdown active">
               <a class="nav-link dropdown-toggle" href="services.html" id="dropdown07" data-bs-toggle="dropdown" aria-expanded="false">NOS SERVICES</a>
               <div class="dropdown-menu" aria-labelledby="dropdown07">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="#card1">Audit SEO complet</a>
+                <a class="dropdown-item" href="#card2">Rédaction de Contenu Optimisé</a>
+                <a class="dropdown-item" href="#card3">Optimisation On-Page</a>
+                <a class="dropdown-item" href="#card4">SEO Local</a>
               </div>
             </li>
             <li class="nav-item">
@@ -51,9 +52,83 @@
     </nav>
 
     <!-- main -->
-<div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
-    
+<div class="container"><br>
+  <h1 class="main-title mb-3 extra-title text-center">Nos services chez  <span class="text-danger">SEO Agency</span></h1><br>
+  <!-- Ligne 1 - Carte à gauche -->
+  <div class="row mb-4 justify-content-start">
+    <div class="col-md-6 d-flex justify-content-start">
+      <div class="service-card slide-in-left" id="card1">
+        <div class="service-header">🔍 Audit SEO Complet</div>
+        <div class="service-short">Analyse technique et stratégique de votre site pour améliorer sa visibilité.</div>
+        <button class="toggle-btn" onclick="toggleDetails(this)">Voir plus</button>
+        <div class="service-details">
+          <ul>
+            <li>Audit technique : vitesse, structure, indexation</li>
+            <li>Analyse des mots-clés et concurrents</li>
+            <li>Recommandations sur mesure</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Ligne 2 - Carte à droite -->
+  <div class="row mb-4 justify-content-end">
+    <div class="col-md-6 d-flex justify-content-end">
+      <div class="service-card slide-in-right" id="card2">
+        <div class="service-header">✍️ Rédaction de Contenu Optimisé</div>
+        <div class="service-short">Contenus rédigés pour attirer du trafic qualifié et améliorer votre positionnement.</div>
+        <button class="toggle-btn" onclick="toggleDetails(this)">Voir plus</button>
+        <div class="service-details">
+          <ul>
+            <li>Articles de blog, pages produits & services</li>
+            <li>Mots-clés intégrés stratégiquement</li>
+            <li>Contenus orientés utilisateur et SEO</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Ligne 3 - Carte à gauche -->
+  <div class="row mb-4 justify-content-start">
+    <div class="col-md-6 d-flex justify-content-start">
+      <div class="service-card slide-in-left" id="card3">
+        <div class="service-header">🧩 Optimisation On-Page</div>
+        <div class="service-short">Optimisation des balises, contenus et structure pour améliorer la lisibilité SEO.</div>
+        <button class="toggle-btn" onclick="toggleDetails(this)">Voir plus</button>
+        <div class="service-details">
+          <ul>
+            <li>Balises HTML, maillage interne</li>
+            <li>Contenu structuré et accessible</li>
+            <li>Adapté aux Core Web Vitals</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Ligne 4 - Carte à droite -->
+  <div class="row mb-4 justify-content-end">
+    <div class="col-md-6 d-flex justify-content-end">
+      <div class="service-card slide-in-right" id="card4">
+        <div class="service-header">🌐 SEO Local</div>
+        <div class="service-short">Améliorez votre présence auprès d’une clientèle proche grâce au référencement local.</div>
+        <button class="toggle-btn" onclick="toggleDetails(this)">Voir plus</button>
+        <div class="service-details">
+          <ul>
+            <li>Optimisation de Google Business Profile</li>
+            <li>Référencement local sur Maps</li>
+            <li>Mentions géographiques ciblées</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 </div>
+<br>
 
 
      <!-- FOOTER -->
@@ -72,14 +147,7 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-    var dropdownLink = document.getElementById('dropdown07');
-    dropdownLink.addEventListener('click', function (e) {
-      // Aller directement sur la page services.html au clic
-      window.location.href = this.href;
-    });
-  });
-</script>
+<script src="js/script.js"></script>
+
 </body>
 </html>
