--- a/contact.html
+++ b/contact.html
@@ -55,37 +55,39 @@
 <div class="container"><br>
   <h1 class="main-title mb-3 extra-title text-center">Voulez-vous COLLABORER ? Contactez dès maintenant  <span class="text-danger">SEO Agency</span></h1><br>
   <br>
-    <form style="width: 60%;margin-left: 20%;">
+    <form id="contactForm" style="width: 60%; margin-left: 20%;" novalidate>
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="Nom">Nom</label>
-        <input type="text" class="form-control" id="Nom" placeholder="Votre Nom">
+        <input type="text" class="form-control" id="Nom" placeholder="Votre Nom" required>
       </div>
       <div class="form-group col-md-6">
-        <label for="Prenom">Prenom</label>
-        <input type="text" class="form-control" id="Prenom" placeholder="Votre Prenom">
+        <label for="Prenom">Prénom</label>
+        <input type="text" class="form-control" id="Prenom" placeholder="Votre Prénom" required>
       </div>
     </div>
     <div class="form-group">
       <label for="Email">Email</label>
-      <input type="email" class="form-control" id="Email" placeholder="xyz@domain.ext">
+      <input type="email" class="form-control" id="Email" placeholder="xyz@domain.ext" required>
     </div>
     <div class="form-group">
       <label for="Telephone">Téléphone</label>
-      <input type="tel" class="form-control" id="Telephone">
+      <input type="tel" class="form-control" id="Telephone" required>
     </div>
     <div class="form-row">
       <div class="form-group">
         <label for="Message">Votre Message</label>
         <textarea class="form-control" id="message" name="message" 
-            style="width:500px; height:250px;" placeholder="Écrivez ici..."></textarea>
-      
+            style="width:500px; height:250px;" placeholder="Écrivez ici..." required></textarea> 
       </div>
-      
     </div>
-
     <button type="submit" class="btn btn-secondary">Envoyer</button>
   </form>
+
+  <!-- Zone de notification -->
+  <div id="alertBox" class="mt-4"></div>
+  
+  <br>
   <hr>
   <div class="contact-info container my-5">
     <h1 class="main-title mb-3 extra-title text-center">Nos coordonnées </h1><br>
