--- a/services.html
+++ b/services.html
@@ -54,7 +54,7 @@
     <!-- main -->
 <div class="container"><br>
   <h1 class="main-title mb-3 extra-title text-center">Nos services chez  <span class="text-danger">SEO Agency</span></h1><br>
-  <!-- Ligne 1 - Carte à gauche -->
+  <!-- services 1 -->
   <div class="row mb-4 justify-content-start">
     <div class="col-md-6 d-flex justify-content-start">
       <div class="service-card slide-in-left" id="card1">
@@ -72,7 +72,7 @@
     </div>
   </div>
 
-  <!-- Ligne 2 - Carte à droite -->
+  <!-- services 2 -->
   <div class="row mb-4 justify-content-end">
     <div class="col-md-6 d-flex justify-content-end">
       <div class="service-card slide-in-right" id="card2">
@@ -90,7 +90,7 @@
     </div>
   </div>
 
-  <!-- Ligne 3 - Carte à gauche -->
+  <!-- services 3 -->
   <div class="row mb-4 justify-content-start">
     <div class="col-md-6 d-flex justify-content-start">
       <div class="service-card slide-in-left" id="card3">
@@ -108,7 +108,7 @@
     </div>
   </div>
 
-  <!-- Ligne 4 - Carte à droite -->
+  <!-- services 4 -->
   <div class="row mb-4 justify-content-end">
     <div class="col-md-6 d-flex justify-content-end">
       <div class="service-card slide-in-right" id="card4">
